--- a/src/main/webapp/static/house/css/Public.css
+++ b/src/main/webapp/static/house/css/Public.css
@@ -293,7 +293,7 @@ h3 .Sb {
 #Top dd a:hover {
 	color: #e84a01;
 }
-#Top dt .logo {
+/*#Top dt .logo {
 	float: left;
 	background: url(../images/bg.png);
 	width: 125px;
@@ -301,17 +301,17 @@ h3 .Sb {
 	margin: 7px 11px 0 0;
 	padding: 0;
 	text-indent: -999cm;
-} 
+}  */
 
-/* #Top dt .logo {
+ #Top dt .logo {
 	float: left;
-	background: url(../images/bg.png);
+	background: url(../images/logo.png);
 	width: 125px;
 	height: 34px;
 	margin: 7px 11px 0 0;
 	padding: 0;
 	text-indent: -999cm;
-} */
+}
 #Top dd p a {
 	text-align: center;
 	padding: 0 6px;
